RESOLVED FIXED80002
Fallback elements in Non-youngest shadow tree should not be rendered.
https://bugs.webkit.org/show_bug.cgi?id=80002
Summary Fallback elements in Non-youngest shadow tree should not be rendered.
Shinya Kawanaka
Reported 2012-02-29 21:01:10 PST
Why does it take 'fallback' argument and it creates a fallback text if 'fallback' is not provided? It's very confusing...
Attachments
Patch (7.49 KB, patch)
2012-02-29 21:26 PST, Shinya Kawanaka
morrita: review+
Patch (11.47 KB, patch)
2012-02-29 23:46 PST, Shinya Kawanaka
no flags
Patch for landing (11.48 KB, patch)
2012-02-29 23:53 PST, Shinya Kawanaka
no flags
Shinya Kawanaka
Comment 1 2012-02-29 21:26:18 PST
Shinya Kawanaka
Comment 2 2012-02-29 21:57:34 PST
Shinya Kawanaka
Comment 3 2012-02-29 23:11:10 PST
Reverted r109309 for reason: broke Committed r109315: <http://trac.webkit.org/changeset/109315>
Shinya Kawanaka
Comment 4 2012-02-29 23:33:31 PST
I found a bug in NodeRenderingContext. Fallback elements in non-youngest shadow tree was rendered... It should not be rendered.
Shinya Kawanaka
Comment 5 2012-02-29 23:34:04 PST
Let's reuse this bug to fix it.
Shinya Kawanaka
Comment 6 2012-02-29 23:46:06 PST
Hajime Morrita
Comment 7 2012-02-29 23:50:24 PST
Comment on attachment 129644 [details] Patch Looks OK. Please nominate the test name in ChangeLog.
Shinya Kawanaka
Comment 8 2012-02-29 23:53:49 PST
Created attachment 129646 [details] Patch for landing
Shinya Kawanaka
Comment 9 2012-02-29 23:58:47 PST
Note You need to log in before you can comment on or make changes to this bug.