Fallback elements in non-youngest shadow tree should not be rendered. https://bugs.webkit.org/show_bug.cgi?id=80002

Reviewed by Hajime Morita.

Source/WebCore:

Fallback elements in non-youngest shadow tree should not be rendered, so its phase should be
AttachingNotDistributed instead of AttachingFallbacked.

Tests: multiple-shadowroot-rendering.html covers this patch.

* dom/NodeRenderingContext.cpp:
(WebCore::NodeRenderingContext::NodeRenderingContext):

LayoutTests:

Since createContentWithSelect shadw-test-driver.js is not intuitive, fallback element
is not added in existing tests.
This change makes sure the existence of fallback elements.

* fast/dom/resources/shadow-test-driver.js:
(createContentWithSelect):
* fast/dom/shadow/content-element-move.html:
* fast/dom/shadow/multiple-shadowroot-rendering.html:

Canonical link: https://commits.webkit.org/97074@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109321 268f45cc-cd09-0410-ab3c-d52691b4dbfc